# Litwick

./: .gitignore  Readme.md
micrograd/: main.ipynb  makemore.ipynb  micrograd  pyproject.toml
nnfs/: go.mod  go.sum  main.go
nnfs/cmd/: main.go
nnfs/src/: errors.go  type.go
pytorch/: Makefile  README.md  makemore_1_bigram.ipynb  makemore_2_mlp.ipynb  micrograd.ipynb  pyproject.toml  pytorch.ipynb
pytorch/Misra/: day1_10.ipynb  day_0_0.ipynb  day_1_10.ipynb
pytorch/basic/: descision_tree.ipynb  knn.ipynb  ml.ipynb  pytorch.ipynb  random_forest.ipynb
pytorch/docs/: activation.ipynb  loss.ipynb  regression.ipynb
pytorch/makemore/: makemore_1_bigram.ipynb  makemore_2_mlp.ipynb  makemore_3_bn.ipynb
